# knowledge

./: .mcp.json  CLAUDE.md  DAILY_TODO.md  Makefile  TODO.md
.claude/agents/: prd-interview-conductor.md  shower-thoughts-processor.md  web-content-downloader.md
.github/scripts/: create_shower_thought.py
.github/workflows/: shower-thought.yml  shower-thoughts.yml
python/knowledge/: .gitignore  Makefile  pyproject.toml
python/knowledge/src/knowledge/: __init__.py  cli.py
raw-materials/: dagster-rise-of-medium-code-blog-post.md
shower-thoughts/: ai-makes-porous-borders-2025-08-10.md  ast-aware-tooling-upside-2025-08-10.md  coarse-grained-modules-important-2025-08-10.md  difficult-to-follow-instructions-2025-08-10.md  fast-tests-and-tools-important-2025-08-10.md  final-title-test-2025-08-10.md  incredible-at-searching-historically-2025-08-10.md  jargon-knowledge-useful-2025-08-10.md  manual-review-still-important-2025-08-10.md  mission-md-docs-2025-08-10.md  need-to-get-wetsuite-prepared-2025-08-10.md  ok-final-test-hopefully-2025-08-10.md  refactor-to-generalization-technique-2025-08-10.md  refactoring-good-token-intensive-2025-08-10.md  repo-builtin-cli-2025-08-10.md  research-potentially-using-zettelkasten-for-knowle-2025-08-10.md  shower-thought-2025-08-10-0720-2025-08-10.md  shower-thought-2025-08-10-0722-2025-08-10.md  shower-thought-2025-08-10-0726-2025-08-10.md  shower-thought-2025-08-10-0728-2025-08-10.md  shower-thought-2025-08-10-0732-2025-08-10.md  shower-thought-2025-08-10-0736-2025-08-10.md  shower-thought-2025-08-10-0740-2025-08-10.md  shower-thought-2025-08-10-0743-2025-08-10.md  structured-process-for-complex-tasks-2025-08-10.md  testing-permissions-fix-for-github-action-2025-08-10.md  treat-claude-like-compiler-2025-08-10.md  turns-you-into-pm-2025-08-10.md
tasks/: open_water_race_timing.md
(+71 files in other folders)
